[gd_scene load_steps=6 format=3 uid="uid://dubtl88ywlf7i"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_44i0t"]
[ext_resource type="Texture2D" uid="uid://dc38inwt5pt5o" path="res://assets/background/rocks_2.png" id="1_vcpoh"]
[ext_resource type="PackedScene" uid="uid://dn4ov53ftm0jl" path="res://scenes/plane/plane.tscn" id="2_3t5m2"]
[ext_resource type="PackedScene" uid="uid://c7wiulmilyiq3" path="res://scenes/barrier/barrier.tscn" id="3_dl188"]
[ext_resource type="PackedScene" uid="uid://1hi2ijm5extc" path="res://scenes/pipes/Pipes.tscn" id="4_do8uv"]

[node name="Game" type="Node2D"]
script = ExtResource("1_44i0t")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(126, 428)
texture = ExtResource("1_vcpoh")

[node name="Plane" parent="." instance=ExtResource("2_3t5m2")]
position = Vector2(68, 443)

[node name="Barrier" parent="." instance=ExtResource("3_dl188")]
position = Vector2(3, -42)

[node name="Barrier2" parent="." instance=ExtResource("3_dl188")]
position = Vector2(4, 869)

[node name="Pipes" parent="." instance=ExtResource("4_do8uv")]
position = Vector2(230, 395)

[node name="Marker2D_up" type="Marker2D" parent="."]
position = Vector2(525, 340)

[node name="Marker2D2_down" type="Marker2D" parent="."]
position = Vector2(525, 540)

[node name="Pipes_Spawn_Timer" type="Timer" parent="."]
wait_time = 1.2
autostart = true

[node name="Pipes_Container" type="Node" parent="."]

[connection signal="timeout" from="Pipes_Spawn_Timer" to="." method="spawn_timer_timeout"]
